4.rabbitmq/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "rabbitmq"
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/cluster-issuer: letsencrypt-staging
spec:
  rules:
  - host: hatkit.xyz
    http:
      paths:
        - path: /rabbitmq
          backend:
            serviceName: rabbitmq
            servicePort: 15672
  tls:
  - hosts:
    - hatkit.xyz
    secretName: letsencrypt-staging
